auto-test/tests/chapter_17/invalid_types/incomplete_types/sizeof_function.c
int x(void) { return 0; }


int main(void) { return sizeof x; }